# vault_dispatch

./: Cargo.toml  README.md  build_existing.sh  deploy_new.sh  package-lock.json
src/: bits.rs  documents.rs  lib.rs  messaging.rs
src/program-rust/: Cargo.toml
src/program-rust/src/: bits.rs  lib.rs
