[package]
name = "dispatch"
version = "1.0.0"
description = "A very basic Messaging system"
authors = ["Daniel Mills <cyberpwn>", "Arcane Arts"]
repository = "https://github.com/VaultBlack/dispatch"
license = "GPL 3.0"
homepage = "https://vault.black/"
edition = "2018"

[features]
no-entrypoint = []

[dependencies]
borsh = "0.9.1"
borsh-derive = "0.9.1"
solana-program = "=1.7.9"

[dev-dependencies]
solana-program-test = "=1.7.9"
solana-sdk = "=1.7.9"

[lib]
name = "dispatch"
crate-type = ["cdylib", "lib"]
